force-app/main/default/objects/ortto__OrttoActivity__c/ortto__OrttoActivity__c.object-meta.xml
<CustomObject>
    <description>Ortto activities</description>
    <label>Ortto Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ortto Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>