force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Account__c.field-meta.xml
<CustomField>
    <fullName>ortto__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ortto Activities</relationshipLabel>
    <relationshipName>Ortto_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>