force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Activity_ID__c</fullName>
    <label>Activity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>