force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Attributes__c.field-meta.xml
<CustomField>
    <fullName>ortto__Attributes__c</fullName>
    <description>Activity attributes</description>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>