force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Contact__c.field-meta.xml
<CustomField>
    <fullName>ortto__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>