force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Contact_ID__c</fullName>
    <description>Ortto contact ID</description>
    <label>Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>