force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>ortto__CreatedAt__c</fullName>
    <label>CreatedAt</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>