force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Data_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Data_Source_ID__c</fullName>
    <description>Ortto data source id</description>
    <label>Data Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>