force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Email_Name__c.field-meta.xml
<CustomField>
    <fullName>ortto__Email_Name__c</fullName>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>