force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Email_Preview_URL__c.field-meta.xml
<CustomField>
    <fullName>ortto__Email_Preview_URL__c</fullName>
    <label>Email Preview URL</label>
    <type>Url</type>
</CustomField>