force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__InstanceID__c.field-meta.xml
<CustomField>
    <fullName>ortto__InstanceID__c</fullName>
    <label>InstanceID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>