force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Lead__c.field-meta.xml
<CustomField>
    <fullName>ortto__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>