force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Object__c.field-meta.xml
<CustomField>
    <fullName>ortto__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>