force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Object_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Object_ID__c</fullName>
    <label>Object ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>