force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Organization_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Organization_ID__c</fullName>
    <description>Ortto organization id</description>
    <label>Organization ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>