force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Related_Resource_IDs__c.field-meta.xml
<CustomField>
    <fullName>ortto__Related_Resource_IDs__c</fullName>
    <label>Related Resource IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>