force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>ortto__Resource_ID__c</fullName>
    <description>Ortto resource ID (campaign/capture-widget/etc...)</description>
    <label>Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>