force-app/main/default/objects/ortto__OrttoActivity__c/fields/ortto__Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>ortto__Resource_Type__c</fullName>
    <label>Resource Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>